changing margin-left to margin-right to fix gap

--- a/src/components/about.css
+++ b/src/components/about.css
@@ -40,7 +40,7 @@
 
 .num4 {
   width: 461px;
-  margin-left: 42px;
+  margin-right: 42px;
   margin-top: 35px;
 }
 
